[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/entity/dude/pickup_grabber.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 5 )

[node name="pickup_grabber" type="Node2D"]
script = ExtResource( 1 )

[node name="pickup_hold" type="Node2D" parent="."]
position = Vector2( 0, -5 )

[node name="pickup_detect_area" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickup_detect_area"]
shape = SubResource( 1 )

[node name="ship_detect_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ship_detect_area"]
shape = SubResource( 1 )
